--- a/build.xml
+++ b/build.xml
@@ -11,18 +11,39 @@
                 <attribute name="Main-Class" value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader"/>
                 <attribute name="Rsrc-Main-Class" value="access2csv.Driver"/>
                 <attribute name="Class-Path" value="."/>
-                <attribute name="Rsrc-Class-Path" value="./ jackcess-2.0.2.jar commons-logging-1.1.3.jar commons-lang-2.6.jar opencsv-2.3.jar"/>
+                <attribute name="Rsrc-Class-Path" value="./ jackcess-encrypt-2.1.0.jar commons-logging-1.1.3.jar commons-lang-2.6.jar opencsv-2.3.jar commons-cli-1.3.1.jar jackcess-2.1.2.jar bcmail-jdk15on-1.50.jar bcpg-jdk15on-1.50.jar bcpkix-jdk15on-1.50.jar bcprov-jdk15on-1.50.jar bcprov-ext-jdk15on-1.50.jar bcmail-jdk15on.jar"/>
             </manifest>
             <zipfileset src="jar-in-jar-loader.zip"/>
             <fileset dir="bin"/>
-            <zipfileset dir="lib" includes="jackcess-2.0.2.jar"/>
+            <zipfileset dir="lib" includes="jackcess-2.1.2.jar"/>
+            <zipfileset dir="lib" includes="jackcess-encrypt-2.1.0.jar"/>
             <zipfileset dir="lib" includes="commons-logging-1.1.3.jar"/>
             <zipfileset dir="lib" includes="commons-lang-2.6.jar"/>
+            <zipfileset dir="lib" includes="commons-cli-1.3.1.jar"/>
             <zipfileset dir="lib" includes="opencsv-2.3.jar"/>
+            <zipfileset dir="lib" includes="bcmail-jdk15on-1.50.jar"/>
+            <zipfileset dir="lib" includes="bcpg-jdk15on-1.50.jar"/>
+            <zipfileset dir="lib" includes="bcpkix-jdk15on-1.50.jar"/>
+            <zipfileset dir="lib" includes="bcprov-ext-jdk15on-1.50.jar"/>
+            <zipfileset dir="lib" includes="bcprov-jdk15on-1.50.jar"/>
+            <zipfileset dir="lib" includes="bcmail-jdk15on-1.50.jar"/>
         </jar>
     </target>
     <target name="compile">
       <mkdir dir="bin"/>
       <javac includeantruntime="false" srcdir="src" destdir="bin" classpathref="classpath"/>
     </target>
+    <target name="run" depends="create_run_jar">
+	<exec executable="java">
+	    <arg value="-jar"/>
+    		<arg value="access2csv.jar"/>
+    		<arg value="-db"/>
+		<arg value="/home/menda/Dropbox/Amitaival/Junta 2015-2016/Secretaría 2015/Amigos del Taichi.accdb"/>
+		<arg value="-t" />
+    		<arg value="-p"/>
+    		<arg value="2003"/>
+		<arg value="General socios" />
+		<!-- <arg value="28112003"/> -->
+  	</exec>
+</target>
 </project>
